Add auto aspect ratio detection.  To use, select an anamorphic or non-anamorphic mode (there's no way to detect *that* automatically!).  Hit "9" or select "Current Image" from the advanced aspect ratio menu.  The aspect ratio will adjust to whatever is currently on the screen.  Note that if you do this with a very dark image, e.g. an outer-space scene, the algorithm may get confused.
Two new ini file settings in the ASPECT section control this feature.

LuminanceThreshold - How black a pixel has to be for the code to consider it black.  Values are 0-255.  Default is 15.

IgnoreNonBlackPixels - Number of non-black pixels to ignore in letterbox areas.  Default is 20% of the image width, which will allow the code to ignore station logos.  If you're never watching material with logos, set this to 1 to improve reliability of the detection code on dark scenes.

This code doesn't continuously detect aspect ratio (at least, not yet) -- you have to manually tell it when to analyze the image.

--- a/dTV/dTV/dTV.RC
+++ b/dTV/dTV/dTV.RC
@@ -615,7 +615,7 @@ END
 ABOUT DIALOGEX 22, 17, 374, 274
 STYLE DS_MODALFRAME | WS_CAPTION | WS_SYSMENU
 CAPTION "About dTV"
-FONT 8, "MS Sans Serif"
+FONT 8, "MS Sans Serif", 0, 0, 0x1
 BEGIN
     DEFPUSHBUTTON   "OK",IDOK,305,9,58,19,WS_GROUP,WS_EX_CLIENTEDGE
     CTEXT           "dTV Version 1.8",IDC_TEXT1,0,3,293,9
@@ -925,6 +925,7 @@ BEGIN
             MENUITEM "1.85   Anamorphic\tCtrl+Shift+4", IDM_SASPECT_185A
             MENUITEM "2.00   Anamorphic\tCtrl+Shift+5", IDM_SASPECT_200A
             MENUITEM "2.35   Anamorphic\tCtrl+Shift+6", IDM_SASPECT_235A
+            MENUITEM "Current Image\t9",            IDM_SASPECT_COMPUTE
             MENUITEM "Custom  (from .INI file)\tCtrl+9", IDM_SASPECT_CUSTOM
         END
         POPUP "Aspect Ratio of Display Screen"
@@ -1288,6 +1289,7 @@ BEGIN
     "6",            IDM_TASPECT_235,        VIRTKEY, ALT, NOINVERT
     "6",            IDM_SASPECT_235A,       VIRTKEY, SHIFT, CONTROL, 
                                                     NOINVERT
+    "9",            IDM_SASPECT_COMPUTE,    VIRTKEY, NOINVERT
     "9",            IDM_SASPECT_CUSTOM,     VIRTKEY, CONTROL, NOINVERT
     "9",            IDM_TASPECT_CUSTOM,     VIRTKEY, ALT, NOINVERT
     "B",            IDM_BRIGHTNESSMINUS,    VIRTKEY, NOINVERT
