Now using new startup bitmap.

--- a/dTV/dTV/dTV.RC
+++ b/dTV/dTV/dTV.RC
@@ -119,18 +119,18 @@ BEGIN
     DEFPUSHBUTTON   "Cancel",IDCANCEL,345,315,65,15
 END
 
-SPLASHBOX DIALOGEX 0, 0, 128, 106
+SPLASHBOX DIALOGEX 0, 0, 145, 192
 STYLE DS_SYSMODAL | DS_NOIDLEMSG | DS_SETFOREGROUND | DS_3DLOOK | DS_CENTER | 
     WS_POPUP | WS_VISIBLE | WS_BORDER
 EXSTYLE WS_EX_NOPARENTNOTIFY
-FONT 8, "System", 0, 0, 0x1
+FONT 8, "System"
 BEGIN
     CONTROL         "STARTUP",IDC_STATIC,"Static",SS_BITMAP,0,0,11,11
-    CTEXT           "",IDC_TEXT1,62,54,60,8
-    CTEXT           "",IDC_TEXT2,62,62,60,8
-    CTEXT           "",IDC_TEXT3,62,70,60,8
-    CTEXT           "",IDC_TEXT4,62,78,60,8
-    CTEXT           "",IDC_TEXT5,62,86,60,8
+    CTEXT           "",IDC_TEXT1,40,144,60,8
+    CTEXT           "",IDC_TEXT2,40,152,60,8
+    CTEXT           "",IDC_TEXT3,40,160,60,8
+    CTEXT           "",IDC_TEXT4,40,168,60,8
+    CTEXT           "",IDC_TEXT5,40,176,60,8
 END
 
 VIDEOTEXTSMALL DIALOG DISCARDABLE  22, 17, 277, 236
@@ -1119,6 +1119,11 @@ BEGIN
     BEGIN
         RIGHTMARGIN, 338
         BOTTOMMARGIN, 327
+    END
+
+    "SPLASHBOX", DIALOG
+    BEGIN
+        RIGHTMARGIN, 144
     END
 
     "VIDEOTEXTSMALL", DIALOG
