Beginnings of modifications that allow resolution changes while dTV is running. New Enable/Disable Video Overlay options in Advance Menu for debugging

--- a/dTV/dTV/dTV.RC
+++ b/dTV/dTV/dTV.RC
@@ -1116,6 +1116,8 @@ BEGIN
         END
         MENUITEM "&Advanced Video Flags ...",   IDM_ADV_VIDEOSETTINGS
         MENUITEM "&Splash Screen on Startup",   IDM_SPLASH_ON_STARTUP
+        MENUITEM "Stop Video Overlay",          IDM_STOP
+        MENUITEM "Start Video Overlay",         IDM_START
     END
     POPUP "&Help"
     BEGIN
