--- a/dTV/dTV/dTV.RC
+++ b/dTV/dTV/dTV.RC
@@ -59,7 +59,8 @@ BEGIN
 END
 
 CHANNELLIST DIALOG DISCARDABLE  22, 17, 75, 156
-STYLE DS_MODALFRAME | DS_SETFOREGROUND | DS_3DLOOK | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
+STYLE DS_MODALFRAME | DS_SETFOREGROUND | DS_3DLOOK | WS_VISIBLE | WS_CAPTION | 
+    WS_SYSMENU
 CAPTION "Channel List"
 FONT 8, "MS Sans Serif"
 BEGIN
@@ -831,7 +832,7 @@ BEGIN
 END
 
 ADV_VIDEOSETTINGS DIALOG DISCARDABLE  0, 0, 208, 124
-STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
+STYLE WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Advanced Video Flags"
 FONT 8, "MS Sans Serif"
 BEGIN
@@ -841,7 +842,7 @@ BEGIN
     CONTROL         "Adaptive AGC (CRUSH)",IDC_CRUSH,"Button",
                     BS_AUTOCHECKBOX | WS_TABSTOP,12,26,88,10
     CONTROL         "Even Chroma AGC",IDC_E_CAGC,"Button",BS_AUTOCHECKBOX | 
-                    WS_TABSTOP,12,39,72,10
+                    WS_TABSTOP,12,38,72,10
     CONTROL         "Odd Chroma AGC",IDC_O_CAGC,"Button",BS_AUTOCHECKBOX | 
                     WS_TABSTOP,12,52,70,10
     CONTROL         "Even Luma Peaking",IDC_E_LUMA_PEAK,"Button",
@@ -862,6 +863,76 @@ BEGIN
                     BS_AUTOCHECKBOX | WS_TABSTOP,106,26,84,10
     CONTROL         "Odd Chroma Comb",IDC_O_COMB,"Button",BS_AUTOCHECKBOX | 
                     WS_TABSTOP,106,52,74,10
+END
+
+BLENDED_CLIP DIALOG DISCARDABLE  0, 0, 173, 292
+STYLE DS_3DLOOK | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
+CAPTION "Blended Clip DeInterlace Controls"
+FONT 8, "MS Sans Serif"
+BEGIN
+    DEFPUSHBUTTON   "OK",IDOK,131,50,38,14
+    PUSHBUTTON      "Cancel",IDCANCEL,131,30,38,14
+    PUSHBUTTON      "Default",IDC_DEFAULT,131,12,38,14
+    LTEXT           "Minimum Clip or Bob",IDC_STATIC,2,9,96,9
+    CONTROL         "SLIDER1",IDC_STATIC,"Static",SS_BITMAP | SS_SUNKEN | 
+                    WS_BORDER | WS_TABSTOP,2,18,17,15
+    PUSHBUTTON      "",IDC_MIN_CLIP,18,22,6,8,WS_DISABLED
+    RTEXT           "0",IDC_MIN_CLIP_V,102,9,21,10,SS_NOPREFIX | NOT 
+                    WS_GROUP
+    LTEXT           "Pixel Movement Sensitivity",IDC_STATIC,2,39,96,9
+    CONTROL         "SLIDER1",IDC_STATIC,"Static",SS_BITMAP | SS_SUNKEN | 
+                    WS_BORDER | WS_TABSTOP,2,49,17,15
+    PUSHBUTTON      "",IDC_PIXEL_MOV,18,52,6,8,WS_DISABLED
+    RTEXT           "0",IDC_PIXEL_MOV_V,102,39,21,9,SS_NOPREFIX | NOT 
+                    WS_GROUP
+    LTEXT           "Recent Avg. Motion Sense.",IDC_STATIC,2,70,96,9
+    CONTROL         "SLIDER1",IDC_STATIC,"Static",SS_BITMAP | SS_SUNKEN | 
+                    WS_BORDER | WS_TABSTOP,2,80,17,15
+    PUSHBUTTON      "",IDC_AVG_MOV,19,83,6,8,WS_DISABLED
+    RTEXT           "0",IDC_AVG_MOV_V,102,70,21,10,SS_NOPREFIX | NOT 
+                    WS_GROUP
+    LTEXT           "Motion Averaging Period",IDC_STATIC,2,100,96,9
+    CONTROL         "SLIDER1",IDC_STATIC,"Static",SS_BITMAP | SS_SUNKEN | 
+                    WS_BORDER | WS_TABSTOP,2,111,17,15
+    PUSHBUTTON      "",IDC_MOV_PERIOD,19,114,6,8,WS_DISABLED
+    RTEXT           "0",IDC_MOV_PERIOD_V,102,100,21,10,SS_NOPREFIX | NOT 
+                    WS_GROUP
+    LTEXT           "Pixel Comb Sensitivity",IDC_STATIC,2,132,96,9
+    CONTROL         "SLIDER1",IDC_STATIC,"Static",SS_BITMAP | SS_SUNKEN | 
+                    WS_BORDER | WS_TABSTOP,2,142,17,15
+    PUSHBUTTON      "",IDC_PIXEL_COMB,19,145,6,8,WS_DISABLED
+    RTEXT           "0",IDC_PIXEL_COMB_V,102,132,21,10,SS_NOPREFIX | NOT 
+                    WS_GROUP
+    LTEXT           "Recent Avg. Comb Sense.",IDC_STATIC,2,163,96,9
+    CONTROL         "SLIDER1",IDC_STATIC,"Static",SS_BITMAP | SS_SUNKEN | 
+                    WS_BORDER | WS_TABSTOP,2,173,17,15
+    PUSHBUTTON      "",IDC_AVG_COMB,18,177,6,8,WS_DISABLED
+    RTEXT           "0",IDC_AVG_COMB_V,102,163,21,9,SS_NOPREFIX | NOT 
+                    WS_GROUP
+    LTEXT           "Comb Averaging Period",IDC_STATIC,2,195,96,9
+    CONTROL         "SLIDER1",IDC_STATIC,"Static",SS_BITMAP | SS_SUNKEN | 
+                    WS_BORDER | WS_TABSTOP,2,204,17,15
+    PUSHBUTTON      "",IDC_COMB_PERIOD,19,207,6,8,WS_DISABLED
+    RTEXT           "0",IDC_COMB_PERIOD_V,102,195,21,9,SS_NOPREFIX | NOT 
+                    WS_GROUP
+    LTEXT           "Skip HIGH Comb Frames",IDC_STATIC,2,225,96,9
+    CONTROL         "SLIDER1",IDC_STATIC,"Static",SS_BITMAP | SS_SUNKEN | 
+                    WS_BORDER | WS_TABSTOP,2,235,17,15
+    PUSHBUTTON      "",IDC_COMB_SKIP,19,238,6,8,WS_DISABLED
+    RTEXT           "0",IDC_COMB_SKIP_V,102,225,21,9,SS_NOPREFIX | NOT 
+                    WS_GROUP
+    LTEXT           "Skip LOW Motion Frames",IDC_STATIC,2,256,96,9
+    CONTROL         "SLIDER1",IDC_STATIC,"Static",SS_BITMAP | SS_SUNKEN | 
+                    WS_BORDER | WS_TABSTOP,2,266,17,15
+    PUSHBUTTON      "",IDC_MOTION_SKIP,19,268,6,8,WS_DISABLED
+    RTEXT           "0",IDC_MOTION_SKIP_V,102,256,21,9,SS_NOPREFIX | NOT 
+                    WS_GROUP
+    CONTROL         "Use BOB instead of CLIP",IDC_USE_INTERP_BOB,"Button",
+                    BS_AUTOCHECKBOX | BS_LEFTTEXT | BS_TOP | BS_MULTILINE | 
+                    WS_TABSTOP,129,98,38,40
+    CONTROL         "Blend Chroma Values  ",IDC_BLEND_CHROMA,"Button",
+                    BS_AUTOCHECKBOX | BS_LEFTTEXT | BS_TOP | BS_MULTILINE | 
+                    WS_TABSTOP,129,163,38,40
 END
 
 
@@ -982,6 +1053,7 @@ BEGIN
             MENUITEM "V&ideo Deinterlace (Weave)",  IDM_VIDEO_WEAVE
             MENUITEM "Simple &Weave",               IDM_WEAVE
             MENUITEM "Interpolated &Bob",           IDM_BOB
+            MENUITEM "Blended &Clip ...",           IDM_BLENDED_CLIP
             MENUITEM "B&TV Plugin",                 IDM_BTV
             MENUITEM "3:2 Pulldown, Skip Field &1", IDM_32PULL1
             MENUITEM "3:2 Pulldown, Skip Field &2", IDM_32PULL2
@@ -1304,6 +1376,14 @@ BEGIN
         TOPMARGIN, 7
         BOTTOMMARGIN, 117
     END
+
+    "BLENDED_CLIP", DIALOG
+    BEGIN
+        LEFTMARGIN, 2
+        RIGHTMARGIN, 171
+        BOTTOMMARGIN, 286
+        HORZGUIDE, 4
+    END
 END
 #endif    // APSTUDIO_INVOKED
 
@@ -1398,9 +1478,8 @@ BEGIN
     "Y",            IDM_L_BALANCE,          VIRTKEY, SHIFT, NOINVERT
     "_",            IDM_VOLUMEMINUS,        ASCII,  NOINVERT
     "`",            IDM_SASPECT_COMPUTE,    ASCII,  NOINVERT
-		// MAE 8 Nov 2000 Added for channel list
-		VK_HOME,				IDM_CHANNEL_LIST,				VIRTKEY, NOINVERT
-		VK_END,					IDM_SHOW_OSD,						VIRTKEY, NOINVERT
+    VK_HOME,        IDM_CHANNEL_LIST,       VIRTKEY, NOINVERT
+    VK_END,         IDM_SHOW_OSD,           VIRTKEY, NOINVERT
 END
 
 
