--- a/dTV/dTV/dTV.RC
+++ b/dTV/dTV/dTV.RC
@@ -613,10 +613,10 @@ END
 ABOUT DIALOGEX 22, 17, 374, 274
 STYLE DS_MODALFRAME | WS_CAPTION | WS_SYSMENU
 CAPTION "About dTV"
-FONT 8, "MS Sans Serif", 0, 0, 0x1
+FONT 8, "MS Sans Serif"
 BEGIN
     DEFPUSHBUTTON   "OK",IDOK,305,9,58,19,WS_GROUP,WS_EX_CLIENTEDGE
-    CTEXT           "dTV Version 1.8",IDC_TEXT1,0,3,293,9
+    CTEXT           "dTV Version 2.x",IDC_VERSION,0,3,293,9
     CTEXT           "Copyright (C) 2000 John Adcock (johnadcock@hotmail.com)",
                     IDC_STATIC,0,24,293,10
     GROUPBOX        "Based On Multi-Dec 5.6",IDC_STATIC,5,101,364,43
@@ -1222,7 +1222,6 @@ BEGIN
 
     "CHANNELLIST", DIALOG
     BEGIN
-        RIGHTMARGIN, 455
         BOTTOMMARGIN, 155
     END
 
