Add support for "Even Only" and "Odd Only" deinterlace modes. These modes throw away the odd or even scanlines respectively, and let the video card scale the resulting half-height image up to full height. This can produce better results than bobbing on some systems since the video card's scaling hardware can smooth the image as it scales up. These modes also eat less CPU time than any of the other deinterlace modes, making them well-suited for running dTV in a window while using other apps.

--- a/dTV/dTV/dTV.RC
+++ b/dTV/dTV/dTV.RC
@@ -1062,6 +1062,8 @@ BEGIN
             MENUITEM "3:2 Pulldown, Skip Field &5", IDM_32PULL5
             MENUITEM "2:2 Pulldown, Flip on &Odd",  IDM_22PULLODD
             MENUITEM "2:2 Pulldown, Flip on &Even", IDM_22PULLEVEN
+            MENUITEM "E&ven Fields Only",           IDM_EVEN_ONLY
+            MENUITEM "O&dd Fields Only",            IDM_ODD_ONLY
         END
         POPUP "&Audio Input"
         BEGIN
