Changed a few IDM_ codes

--- a/dTV/dTV/dTV.RC
+++ b/dTV/dTV/dTV.RC
@@ -1462,7 +1462,6 @@ BEGIN
     VK_ADD,         IDM_VOLUMEPLUS,         VIRTKEY, NOINVERT
     VK_BACK,        IDM_HIDE_OSD,           VIRTKEY, NOINVERT
     VK_DOWN,        IDM_VT_PAGE_DOWN,       VIRTKEY, NOINVERT
-    VK_END,         IDM_SHOW_OSD,           VIRTKEY, NOINVERT
     VK_ESCAPE,      IDM_END,                VIRTKEY, NOINVERT
     VK_F1,          IDM_TUNER,              VIRTKEY, CONTROL, ALT, NOINVERT
     VK_F1,          IDM_AUDIO_0,            VIRTKEY, SHIFT, CONTROL, 
@@ -1492,6 +1491,7 @@ BEGIN
     VK_LEFT,        IDM_VT_PAGE_MINUS,      VIRTKEY, NOINVERT
     VK_NEXT,        IDM_CHANNELMINUS,       VIRTKEY, NOINVERT
     VK_PRIOR,       IDM_CHANNELPLUS,        VIRTKEY, NOINVERT
+    VK_RETURN,      IDM_SHOW_OSD,           VIRTKEY, NOINVERT
     VK_RETURN,      IDM_TOGGLECURSOR,       VIRTKEY, CONTROL, NOINVERT
     VK_RETURN,      IDM_FULL_SCREEN,        VIRTKEY, ALT, NOINVERT
     VK_RIGHT,       IDM_VT_PAGE_PLUS,       VIRTKEY, NOINVERT
