Changed Ini file name handling Stopped Mark's changes from crashing and repeatedly writing to ini file

--- a/dTV/dTV/dTV.RC
+++ b/dTV/dTV/dTV.RC
@@ -121,7 +121,7 @@ SPLASHBOX DIALOGEX 0, 0, 145, 192
 STYLE DS_SYSMODAL | DS_NOIDLEMSG | DS_SETFOREGROUND | DS_3DLOOK | DS_CENTER | 
     WS_POPUP | WS_VISIBLE | WS_BORDER
 EXSTYLE WS_EX_NOPARENTNOTIFY
-FONT 8, "System", 0, 0, 0x1
+FONT 8, "System"
 BEGIN
     CONTROL         "STARTUP",IDC_STATIC,"Static",SS_BITMAP,0,0,11,11
     CTEXT           "",IDC_TEXT1,40,144,60,8
