Add check for CPU caps.  Add Horizontal & Vertical filter  to Adv Video menu.  Save/restore new ini parms for deinterlace mode and Adv Video setting:
DeinterlaceMode=1
BtAgcDisable=0
BtCrush=1
BtEvenChromaAGC=1
BtOddChromaAGC=1
BtEvenLumaPeak=0
BtOddLumaPeak=0
BtFullLumaRange=1
BtEvenLumaDec=0
BtOddLumaDec=0
BtEvenComb=1
BtOddComb=1
BtColorBars=0
BtGammaCorrection=0
BtCoring=0
BtHorFilter=0
BtVertFilter=0
BtColorKill=1
BtWhiteCrushUp=207
BtWhiteCrushDown=127

--- a/dTV/dTV/dTV.RC
+++ b/dTV/dTV/dTV.RC
@@ -831,12 +831,12 @@ BEGIN
                     IDC_STATIC,7,34,284,22
 END
 
-ADV_VIDEOSETTINGS DIALOG DISCARDABLE  0, 0, 208, 124
+ADV_VIDEOSETTINGS DIALOG DISCARDABLE  0, 0, 208, 126
 STYLE WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Advanced Video Flags"
 FONT 8, "MS Sans Serif"
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,151,103,50,14
+    DEFPUSHBUTTON   "OK",IDOK,151,105,50,14
     CONTROL         "Automatic Gain Control",IDC_AGC,"Button",
                     BS_AUTOCHECKBOX | WS_TABSTOP,12,13,84,10
     CONTROL         "Adaptive AGC (CRUSH)",IDC_CRUSH,"Button",
@@ -863,6 +863,10 @@ BEGIN
                     BS_AUTOCHECKBOX | WS_TABSTOP,106,26,84,10
     CONTROL         "Odd Chroma Comb",IDC_O_COMB,"Button",BS_AUTOCHECKBOX | 
                     WS_TABSTOP,106,52,74,10
+    CONTROL         "Horizontal Filter",IDC_HOR_FILTER,"Button",
+                    BS_AUTOCHECKBOX | WS_TABSTOP,106,91,83,10
+    CONTROL         "Vertical Filtter",IDC_VERT_FILTER,"Button",
+                    BS_AUTOCHECKBOX | WS_TABSTOP,12,103,83,10
 END
 
 BLENDED_CLIP DIALOG DISCARDABLE  0, 0, 173, 292
@@ -1377,7 +1381,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 201
         TOPMARGIN, 7
-        BOTTOMMARGIN, 117
+        BOTTOMMARGIN, 119
     END
 
     "BLENDED_CLIP", DIALOG
