--- a/dTV/dTV/dTV.RC
+++ b/dTV/dTV/dTV.RC
@@ -121,7 +121,7 @@ SPLASHBOX DIALOGEX 0, 0, 145, 192
 STYLE DS_SYSMODAL | DS_NOIDLEMSG | DS_SETFOREGROUND | DS_3DLOOK | DS_CENTER | 
     WS_POPUP | WS_VISIBLE | WS_BORDER
 EXSTYLE WS_EX_NOPARENTNOTIFY
-FONT 8, "System"
+FONT 8, "System", 0, 0, 0x1
 BEGIN
     CONTROL         "STARTUP",IDC_STATIC,"Static",SS_BITMAP,0,0,11,11
     CTEXT           "",IDC_TEXT1,40,144,60,8
@@ -865,7 +865,7 @@ BEGIN
                     WS_TABSTOP,106,52,74,10
     CONTROL         "Horizontal Filter",IDC_HOR_FILTER,"Button",
                     BS_AUTOCHECKBOX | WS_TABSTOP,106,91,83,10
-    CONTROL         "Vertical Filtter",IDC_VERT_FILTER,"Button",
+    CONTROL         "Vertical Filter",IDC_VERT_FILTER,"Button",
                     BS_AUTOCHECKBOX | WS_TABSTOP,12,103,83,10
 END
 
