--- a/dTV/dTV/dTV.RC
+++ b/dTV/dTV/dTV.RC
@@ -1097,6 +1097,20 @@ BEGIN
             MENUITEM "PAL-&M\tShift+Alt+F4",        IDM_TYPEFORMAT_3
             MENUITEM "PA&L-N\tShift+Alt+F5",        IDM_TYPEFORMAT_4
             MENUITEM "NTSC Japan   \tShift+Alt+F6", IDM_TYPEFORMAT_5
+            MENUITEM "PAL60   \tShift+Alt+F6",      IDM_TYPEFORMAT_6
+        END
+        POPUP "Pixel &Width"
+        BEGIN
+            MENUITEM "768",                         ID_SETTINGS_PIXELWIDTH_768
+
+            MENUITEM "720",                         ID_SETTINGS_PIXELWIDTH_720
+            , CHECKED
+            MENUITEM "640",                         ID_SETTINGS_PIXELWIDTH_640
+
+            MENUITEM "384",                         ID_SETTINGS_PIXELWIDTH_384
+
+            MENUITEM "320",                         ID_SETTINGS_PIXELWIDTH_320
+
         END
     END
     POPUP "&Hardware"
