--- a/dTV/dTV/dTV.RC
+++ b/dTV/dTV/dTV.RC
@@ -1082,12 +1082,14 @@ BEGIN
         END
         POPUP "Video &Input"
         BEGIN
-            MENUITEM "&Tuner\tCtrl+Alt+F1",         IDM_TUNER
-            MENUITEM "&Composite\tCtrl+Alt+F2",     IDM_EXTERN1
-            MENUITEM "&S-Video\tCtrl+Alt+F3",       IDM_EXTERN2
-            MENUITEM "Co&mposite via S-Video  \tCtrl+Alt+F4", IDM_EXTERN5
-            MENUITEM "&Other 1\tCtrl+Alt+F5",       IDM_EXTERN3
-            MENUITEM "&Other 2\tCtrl+Alt+F6",       IDM_EXTERN4
+            MENUITEM "&Tuner\tCtrl+Alt+F1",         IDM_SOURCE_TUNER
+            MENUITEM "&Composite\tCtrl+Alt+F2",     IDM_SOURCE_COMPOSITE
+            MENUITEM "&S-Video\tCtrl+Alt+F3",       IDM_SOURCE_SVIDEO
+            MENUITEM "Co&mposite via S-Video  \tCtrl+Alt+F4", 
+                                                    IDM_SOURCE_OTHER1
+            MENUITEM "Other - &1\tCtrl+Alt+F5",     IDM_SOURCE_OTHER2
+            MENUITEM "Other - &2\tCtrl+Alt+F6",     IDM_SOURCE_COMPVIASVIDEO
+            MENUITEM "Other - CC&IR\tCtrl+Alt+F7",  IDM_SOURCE_CCIR656
         END
         POPUP "Video &Format"
         BEGIN
@@ -1494,30 +1496,32 @@ BEGIN
     VK_BACK,        IDM_HIDE_OSD,           VIRTKEY, NOINVERT
     VK_DOWN,        IDM_VT_PAGE_DOWN,       VIRTKEY, NOINVERT
     VK_ESCAPE,      IDM_END,                VIRTKEY, NOINVERT
-    VK_F1,          IDM_TUNER,              VIRTKEY, CONTROL, ALT, NOINVERT
+    VK_F1,          IDM_SOURCE_TUNER,       VIRTKEY, CONTROL, ALT, NOINVERT
     VK_F1,          IDM_AUDIO_0,            VIRTKEY, SHIFT, CONTROL, 
                                                     NOINVERT
     VK_F1,          IDM_TYPEFORMAT_0,       VIRTKEY, SHIFT, ALT, NOINVERT
-    VK_F2,          IDM_EXTERN1,            VIRTKEY, CONTROL, ALT, NOINVERT
+    VK_F2,          IDM_SOURCE_COMPOSITE,   VIRTKEY, CONTROL, ALT, NOINVERT
     VK_F2,          IDM_AUDIO_1,            VIRTKEY, SHIFT, CONTROL, 
                                                     NOINVERT
     VK_F2,          IDM_TYPEFORMAT_1,       VIRTKEY, SHIFT, ALT, NOINVERT
-    VK_F3,          IDM_EXTERN2,            VIRTKEY, CONTROL, ALT, NOINVERT
+    VK_F3,          IDM_SOURCE_SVIDEO,      VIRTKEY, CONTROL, ALT, NOINVERT
     VK_F3,          IDM_AUDIO_2,            VIRTKEY, SHIFT, CONTROL, 
                                                     NOINVERT
     VK_F3,          IDM_TYPEFORMAT_2,       VIRTKEY, SHIFT, ALT, NOINVERT
-    VK_F4,          IDM_EXTERN5,            VIRTKEY, CONTROL, ALT, NOINVERT
+    VK_F4,          IDM_SOURCE_COMPVIASVIDEO, VIRTKEY, CONTROL, ALT, 
+                                                    NOINVERT
     VK_F4,          IDM_AUDIO_3,            VIRTKEY, SHIFT, CONTROL, 
                                                     NOINVERT
     VK_F4,          IDM_TYPEFORMAT_3,       VIRTKEY, SHIFT, ALT, NOINVERT
-    VK_F5,          IDM_EXTERN3,            VIRTKEY, CONTROL, ALT, NOINVERT
+    VK_F5,          IDM_SOURCE_OTHER1,      VIRTKEY, CONTROL, ALT, NOINVERT
     VK_F5,          IDM_AUDIO_4,            VIRTKEY, SHIFT, CONTROL, 
                                                     NOINVERT
     VK_F5,          IDM_TYPEFORMAT_4,       VIRTKEY, SHIFT, ALT, NOINVERT
-    VK_F6,          IDM_EXTERN4,            VIRTKEY, CONTROL, ALT, NOINVERT
+    VK_F6,          IDM_SOURCE_OTHER2,      VIRTKEY, CONTROL, ALT, NOINVERT
     VK_F6,          IDM_AUDIO_5,            VIRTKEY, SHIFT, CONTROL, 
                                                     NOINVERT
     VK_F6,          IDM_TYPEFORMAT_5,       VIRTKEY, SHIFT, ALT, NOINVERT
+    VK_F7,          IDM_SOURCE_CCIR656,     VIRTKEY, CONTROL, ALT, NOINVERT
     VK_HOME,        IDM_CHANNEL_LIST,       VIRTKEY, NOINVERT
     VK_LEFT,        IDM_VT_PAGE_MINUS,      VIRTKEY, NOINVERT
     VK_NEXT,        IDM_CHANNELMINUS,       VIRTKEY, NOINVERT
