--- a/dTV/dTV/dTV.RC
+++ b/dTV/dTV/dTV.RC
@@ -1060,15 +1060,19 @@ BEGIN
             MENUITEM "Simple &Bob",                 IDM_BOB
             MENUITEM "Blended &Clip ...",           IDM_BLENDED_CLIP
             MENUITEM "&Scaler BOB",                 IDM_SCALER_BOB
-            MENUITEM "3:2 Pulldown, Skip Field &1", IDM_32PULL1
-            MENUITEM "3:2 Pulldown, Skip Field &2", IDM_32PULL2
-            MENUITEM "3:2 Pulldown, Skip Field &3", IDM_32PULL3
-            MENUITEM "3:2 Pulldown, Skip Field &4", IDM_32PULL4
-            MENUITEM "3:2 Pulldown, Skip Field &5", IDM_32PULL5
-            MENUITEM "2:2 Pulldown, Flip on &Odd",  IDM_22PULLODD
-            MENUITEM "2:2 Pulldown, Flip on &Even", IDM_22PULLEVEN
             MENUITEM "E&ven Fields Only",           IDM_EVEN_ONLY
             MENUITEM "O&dd Fields Only",            IDM_ODD_ONLY
+            MENUITEM SEPARATOR
+            POPUP "&Manual Film Mode Select"
+            BEGIN
+                MENUITEM "3:2 Pulldown, Skip Field &1", IDM_32PULL1
+                MENUITEM "3:2 Pulldown, Skip Field &2", IDM_32PULL2
+                MENUITEM "3:2 Pulldown, Skip Field &3", IDM_32PULL3
+                MENUITEM "3:2 Pulldown, Skip Field &4", IDM_32PULL4
+                MENUITEM "3:2 Pulldown, Skip Field &5", IDM_32PULL5
+                MENUITEM "2:2 Pulldown, Flip on &Odd",  IDM_22PULLODD
+                MENUITEM "2:2 Pulldown, Flip on &Even", IDM_22PULLEVEN
+            END
         END
         POPUP "&Audio Input"
         BEGIN
