Added Adaptive deinterlacing method Split this method out into new file Removed adaptive code from UpdateNTSCPulldownMode Added gNTSCFilmFallbackMode setting Changed UI handling of pulldown selection Fixed PAL detection bug Changed GetCombFactor to work on a primary and secondary set of fields.

--- a/dTV/dTV/dTV.RC
+++ b/dTV/dTV/dTV.RC
@@ -815,6 +815,7 @@ BEGIN
             MENUITEM "&Scaler BOB",                 IDM_SCALER_BOB
             MENUITEM "E&ven Fields Only",           IDM_EVEN_ONLY
             MENUITEM "O&dd Fields Only",            IDM_ODD_ONLY
+            MENUITEM "Ada&ptive Deinterlace",       IDM_ADAPTIVE
             MENUITEM SEPARATOR
             POPUP "&Manual Film Mode Select"
             BEGIN
